# stockbruh

./: README.md  config.yaml  flow-diagram.drawio  requirements.txt  setup.cfg  stockbro.py  stockbro2.py
assets/: symbols.nsv
db/: rss-catalog.schema  rss-feeds.schema
src/: rss.py  util.py
test/: test_all.py  test_extract-fulltext.py  test_rss-trace-link.py
test/extract-fulltext/: 4investors.de-1.html  4investors.de-1.txt  4investors.de-2.html  4investors.de-2.txt  deraktionaer.de-1.html  deraktionaer.de-1.txt  deraktionaer.de-2.html  deraktionaer.de-2.txt  deraktionaer.de-3.html  deraktionaer.de-3.txt  stock-world.de-1.html  stock-world.de-1.txt  stock-world.de-2.html  stock-world.de-2.txt  stock-world.de-3.html  stock-world.de-3.txt
