[project]
rss-db-path = db/rss.db
rss-db-table-items = items
rss-db-table-state = state

[rss-feeds]
fn-nachrichten-meistgelesen = https://www.finanznachrichten.de/rss-nachrichten-meistgelesen
fn-marktberichte            = https://www.finanznachrichten.de/rss-marktberichte
fn-aktien-adhoc             = https://www.finanznachrichten.de/rss-aktien-adhoc
fn-aktien-nachrichten       = https://www.finanznachrichten.de/rss-aktien-nachrichten
fn-nachrichten-aktien-alle  = https://www.finanznachrichten.de/rss-nachrichten-aktien-alle
fn-nachrichten-rohstoffe    = https://www.finanznachrichten.de/rss-nachrichten-rohstoffe
fn-chartanalysen            = https://www.finanznachrichten.de/rss-chartanalysen
fn-nachrichten-aktien-usa   = https://www.finanznachrichten.de/rss-nachrichten-aktien-usa
fn-nasdaq-100-nachrichten-9 = https://www.finanznachrichten.de/rss-nasdaq-100-nachrichten-9
fn-s-p-500-nachrichten-46   = https://www.finanznachrichten.de/rss-s-p-500-nachrichten-46

[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 120
