[project]
rss-feedsdb-path = db/rss-feeds.db
rss-feedsdb-schema = db/rss-feeds.schema
rss-catalogdb-path = db/rss-catalog.db
rss-catalogdb-schema = db/rss-catalog.schema
logdir = log/ ;logging output directory
feeds =
    https://www.nasdaq.com/feed/rssoutbound
    https://finance.yahoo.com/news/rssindex
    http://www.nasdaqtrader.com/rss.aspx?feed=currentheadlines
    https://seekingalpha.com/feed.xml
    https://www.investing.com/rss/news.rss
    https://www.fool.co.uk/feed/
    https://www.moneycontrol.com/rss/latestnews.xml
    https://news.alphastreet.com/feed/
    https://stocksnewsfeed.com/feed/

[rss-feeds]
nasdaq                  = https://www.nasdaq.com/feed/rssoutbound
yahoo-news-rssindex     = https://finance.yahoo.com/news/rssindex
nasdaqtrader            = http://www.nasdaqtrader.com/rss.aspx?feed=currentheadlines
seekingalpha            = https://seekingalpha.com/feed.xml
investing               = https://www.investing.com/rss/news.rss
fool                    = https://www.fool.co.uk/feed/
moneycontrol            = https://www.moneycontrol.com/rss/latestnews.xml
alphastreet             = https://news.alphastreet.com/feed/
stocknewsfeed           = https://stocksnewsfeed.com/feed/

[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 120

[tool:pytest]
testpaths = test